<resources>
    <string name="app_name">Registration Pages Code school</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account_create_a_new_account">Don\'t have account? create a new account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_to_continue">Sign to continue</string>
</resources>