<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:layout_marginTop="@dimen/_60dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleTextView"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        style="@style/TitleTextViewStyle"
        app:layout_constraintEnd_toEndOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="@id/logoImageView"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintBottom_toTopOf="@id/subtitleTextView"/>

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_to_continue"
        android:textColor="@color/subtitleGrey"
        app:layout_constraintEnd_toEndOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toTopOf="@id/emailTextInputLayout"/>


    <com.example.registrationpagescodeschool.ValidatableTextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_mail_outline_24"
        android:layout_marginTop="@dimen/_80dp"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView">

        <com.example.registrationpagescodeschool.ValidatableTextInputEditText
            app:textInputLayoutId="@id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:isRequired="true"
            app:validationType="email"/>
    </com.example.registrationpagescodeschool.ValidatableTextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/emailTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/darkBlue"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_60dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/passwordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        app:layout_constraintBottom_toTopOf="@id/dontHaveAccountTextView"/>

    <TextView
        android:id="@+id/dontHaveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_account_create_a_new_account"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>