<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolbarColoredBackArrow"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/create_account"
        style="@style/TitleTextViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/subTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/subtitleGrey"
        app:layout_constraintEnd_toEndOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/emailTextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/subTitleTextView"
        app:layout_constraintStart_toStartOf="@id/subTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/subTitleTextView"
        app:startIconDrawable="@drawable/baseline_perm_identity_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@id/phoneTextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/userNameTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/userNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/userNameTextInputLayout"
        app:startIconDrawable="@drawable/baseline_mail_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="@id/emailTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
        app:startIconDrawable="@drawable/baseline_smartphone_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@id/confirmPasswordTextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/phoneTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/phoneTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/phoneTextInputLayout"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/passwordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_58dp"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/create_account"
        android:backgroundTint="@color/darkBlue"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout" />

    <TextView
        android:id="@+id/alreadyHaveAnAccountTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintEnd_toEndOf="@id/createAccountButton"
        app:layout_constraintStart_toStartOf="@id/createAccountButton"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton" />


</androidx.constraintlayout.widget.ConstraintLayout>